Lunch break doc style commits.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -206,6 +206,7 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 				<li>
 					<dt id="this.real"><a href="#this.real">real</a></dt>
 					<dd>
+						<code class="value-type">Number</code>
 						Traditionally the first argument, 
 						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
 						representing the <em>real</em> component of the 
@@ -215,6 +216,7 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 				<li>
 					<dt id="this.imaginary"><a href="#this.imaginary">imaginary</a></dt>
 					<dd>
+						<code class="value-type">Number</code>
 						Traditionally the second argument, 
 						a <a href="ComplexNumber.html#.isNumberLike">number-like</a> value 
 						representing the <em>imaginary</em> component of the
@@ -224,13 +226,14 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 				<li>
 					<dt id="this.index"><a href="#this.index">index</a></dt>
 					<dd>
+						<code class="value-type">Number</code>
 						An auto-incrementing identification number assigned to the instance,
 						used for minding the total number of instances created.
 					</dd>
 				</li>
 			</ul>
-			<hr>
-			<h3 id="Constants">Constants</h3>
+			<!-- <hr> -->
+			<h3>Static constants</h3>
 			<p>
 				While <code>Q.ComplexNumber</code> <a href="#Constants">constants</a>
 				are appended directly to the <code>Q.ComplexNumber</code> object,
@@ -277,7 +280,7 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 					<dd><code>new <a href="Q.html">Q</a>.ComplexNumber( NaN, NaN )</code></dd>
 				</li>
 			</ul>
-			<hr>
+			<!-- <hr> -->
 			<h3 id="Static_properties">Static properties</h3>
 			<ul class="properties">
 				<li>
@@ -373,7 +376,7 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 					<dd>Description TK.</dd>
 				</li>
 			</ul>
-			<hr>
+			<!-- <hr> -->
 			<h3 id="Prototype_properties">Prototype properties</h3>
 			<h4>Non-destructive methods</h4>
 			<ul class="properties">
