--- a/Q.html
+++ b/Q.html
@@ -75,7 +75,7 @@ var circuit = Q`
 			<hr>
 			<h3>Constants</h3>
 			<p>
-				While Q constants
+				While <code>Q</code> constants
 				are appended directly to the <code>Q</code> object,
 				they are also appended to the <code>Q.constants</code> object
 				to make looking up constants in the JavaScript console trivial,
